--- a/styles/globals.css
+++ b/styles/globals.css
@@ -51,3 +51,25 @@ body {
 .magz-second {
     text-shadow: rgba(0, 0, 0, 0.325) 0px 6.6009px 28.0538px;
 }
+
+.chat-support__icons {   
+    position: fixed;
+    width: 100%;
+    /* bottom: 100%; */
+    display: flex;
+    justify-content: right;
+    right: 2rem;
+    bottom: .5rem;
+}
+
+.chat-support__icon {
+    height: 56px;
+    width: 56px;
+    margin-bottom: 1rem;
+}
+
+.chat-support__icon>img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
