--- a/styles/globals.css
+++ b/styles/globals.css
@@ -30,6 +30,10 @@ body {
     font-family: 'Quicksand';
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 .magz-no {
     font-family: sans-serif; /* "Monserrat"; */
     font-weight: 700;
@@ -98,3 +102,136 @@ body {
 .confeti {
     top: 0 !important;
 }
+
+/* Navbar*/
+
+.wrapper .navbar ul {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+  }
+  
+  body {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .wrapper {
+    /* max-width: 1200px; */
+    margin: 0 auto;
+    padding: 0;
+  }
+  .wrapper .movil {
+    background-color: white;
+    display: none;
+    padding: 10px;
+  }
+  .mt--mobile{
+    margin-top: -64px;
+  }
+  @media (max-width: 767px) {
+    .wrapper .movil {
+      display: block;
+    }
+    .mt--mobile{
+      margin-top: -70px;
+    }
+  }
+  .wrapper .movil .bar-icon {
+    width: 50px;
+    height: 50px;
+    overflow: hidden;
+  }
+  .wrapper .movil .bar-icon.bar-icon--close .line:nth-child(1) {
+    transform: translate(5px, 15px) rotate(45deg);
+    -webkit-transform: translate(5px, 15px) rotate(45deg);
+    -moz-transform: translate(5px, 15px) rotate(45deg);
+    -ms-transform: translate(5px, 15px) rotate(45deg);
+    -o-transform: translate(5px, 15px) rotate(45deg);
+  }
+  .wrapper .movil .bar-icon.bar-icon--close .line:nth-child(2) {
+    transform: translateX(-150px);
+  }
+  .wrapper .movil .bar-icon.bar-icon--close .line:nth-child(3) {
+    transform: translate(5px, -10px) rotate(-45deg);
+    -webkit-transform: translate(5px, -10px) rotate(-45deg);
+    -moz-transform: translate(5px, -10px) rotate(-45deg);
+    -ms-transform: translate(5px, -10px) rotate(-45deg);
+    -o-transform: translate(5px, -10px) rotate(-45deg);
+  }
+  .wrapper .movil .bar-icon:hover {
+    cursor: pointer;
+  }
+  .wrapper .movil .bar-icon .line {
+    transition: transform 0.5s;
+    -webkit-transition: transform 0.5s;
+    -moz-transition: transform 0.5s;
+    -ms-transition: transform 0.5s;
+    -o-transition: transform 0.5s;
+    background-color: black;
+    width: 50px;
+    height: 3px;
+    margin-top: 10px;
+    float: left;
+  }
+  .wrapper .movil .bar-icon .line:nth-child(3) {
+    margin-bottom: 10px;
+  }
+  .wrapper .navbar ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+  }
+  @media (max-width: 767px) {
+    .wrapper .navbar ul {
+      display: block;
+      height: 0;
+      overflow: hidden;
+      transition: ease-in-out 0.5s height;
+      -webkit-transition: ease-in-out 0.5s height;
+      -moz-transition: ease-in-out 0.5s height;
+      -ms-transition: ease-in-out 0.5s height;
+      -o-transition: ease-in-out 0.5s height;
+    }
+    .wrapper .navbar ul.navbar__list--active {
+      height: 256px;
+    }
+  }
+  .wrapper .navbar ul li {
+    flex-grow: 1;
+    -webkit-flex-grow: 1;
+    -moz-flex-grow: 1;
+    -ms-flex-grow: 1;
+    -o-flex-grow: 1;
+    text-align: center;
+  }
+  .wrapper .navbar ul li a {
+    background-color: white;
+    padding: 20px;
+    display: block;
+  }
+  .wrapper .navbar ul li a:hover {
+    background-color: #282828;
+    cursor: pointer;
+    color: white;
+  }
+  .wrapper .body {
+    margin: 0;
+    padding: 0;
+    background-color: #E6E6E6;
+    height: 150px;
+  }
+  .wrapper .body p {
+    margin: 0;
+  }
+  .wrapper .footer {
+    background-color: #282828;
+    padding: 10px;
+  }
+  .wrapper .footer p {
+    color: white;
+    text-align: right;
+    margin: 0;
+  }
